[workspace]
resolver = "1"
members = [
  "protocol/rtmp",
  "protocol/httpflv",
  "protocol/hls",
  "library/bytesio",
  "application/xiu",
  "application/http-server",
  "application/pprtmp",
  "library/container/flv",
  "library/container/mpegts",
  "library/codec/h264",
  "library/logger",
  "library/streamhub",
  "library/common",
]
