[workspace]
resolver = "1"
members = [
  "protocol/rtmp",
  "protocol/http",
  "library/bytesio",
  "application/xiu",
  "application/pprtmp",
  "library/container/flv",
  "library/container/mpegts",
  "library/codec/h264",
  "library/logger",
  "library/streamhub",
  "library/common", "protocol/http",
]
