[package]
name = "http"
description = "http library."
version = "0.0.1"
authors = ["HarlanC <wawacry@qq.com"]
repository = "https://github.com/harlanc/xiu"
license = "MIT"
categories = ["multimedia", "multimedia::video", 'multimedia::audio']
keywords = ["httpflv", "video", "streaming"]
edition = "2021"

[dependencies]
byteorder = "1.5.0"
bytes = "1.7.0"
failure = "0.1.8"
log = "0.4.22"
axum = { version = "0.7.5" }
tokio-util = { version = "0.7.11", features = ["codec"] }
futures = "0.3.30"
chrono = "0.4.38"

streamhub = { path = "../../library/streamhub/" }
xmpegts = { path = "../../library/container/mpegts/" }
xflv = { path = "../../library/container/flv/" }
commonlib = { path = "../../library/common/" }

[dependencies.tokio]
version = "1.39.2"
default-features = false
features = ["full"]
